syntax = "proto3";

package rsk;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/warmans/rsk-search/server/gen/api";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    version: "1.0";
  };
  external_docs: {
    url: "https://scrimpton.com";
    description: "Search Xfm transcriptions";
  };
  schemes: HTTP;
};
service OauthService {
  rpc GetRedditAuthURL(google.protobuf.Empty) returns (RedditAuthURL) {
    option (google.api.http) = {
      get: "/api/auth/reddit-url"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      operation_id: "getRedditAuthURL",
      summary: "Redirects user to reddit oauth confirmation page"
      tags: "search"
    };
  }
}

message RedditAuthURL {
  string url = 1;
}
